--- a/training1/ForStudent/public/css/shopping.css
+++ b/training1/ForStudent/public/css/shopping.css
@@ -1,20 +1,20 @@
-/* For shopping cart*/
-#btnGoShoppingCartPage{
+/*header*/
+#btnGoSearchingOrder{
 	float: right;
-	width: 50px;
-	height: 50px;
-	margin: 10px 50px 10px 0px;
+	width: 200px;
+	height: 40px;
+	margin: 10px 50px 0px 0px;
+	border-bottom: 1px solid #000000;
+	font-size: 20px;
+	line-height: 40px;
+	text-align: center;
+	color: black;
 }
-#btnGoShoppingCartPage:hover{
-	border-bottom: 1px solid rgba(0,0,0);
-}
-#shopping_cart_icon{
-	width: 100%;
-	height: 100%;
-	background: url("http://localhost:8888/image/shopping_cart_icon.png");
-	background-size: 100% auto;
+#btnGoSearchingOrder:hover{
+	border-bottom: 3px solid #000000;
 }
 
+/*body*/
 /*Username*/
 .UserName{
 	width: 100%;
